--- a/examples/simple_form/package.json
+++ b/examples/simple_form/package.json
@@ -14,6 +14,7 @@
     "typescript": "3.5.2"
   },
   "scripts": {
+    "reinstall": "rm -rf node_modules package-lock.json && npm i",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
